# Advanced-Programimng-1-Project

./: Enviroment.cpp  Enviroment.h  README.md  to_do_file
Advanced-Programimng-1-Project/prog1Project/: CMakeLists.txt  Interperter.cpp
Advanced-Programimng-1-Project/prog1Project/Expressions/: BinaryExpression.h  Expression.h  Number.h  UnaryExpression.h
Advanced-Programimng-1-Project/prog1Project/Expressions/Expressions -_operators/: Div.h  Minus.h  Mul.h  Plus.h
Commands/: OpenDataServerCommand.h  PrintCommand.h
prog1Project/: CMakeLists.txt  Clonable.h  Command.h  CommandExpression.h  DataBase.cpp  DataBase.h  Enviroment.cpp  Enviroment.h  Exceptions.h  Expression.h  Expressions.h  Interperter.cpp  Interperter.h  Interpreter.cpp  Interpreter.h  Symbol.h  Utils.cpp  Utils.h  a.out  main.cpp  prac  vers
prog1Project/Commands/: CMakeLists.txt  CommandCreator.h  ConditionParser.cpp  ConditionParser.h  ConnectCommand.cpp  ConnectCommand.h  Creators.h  DefineVarCommand.cpp  DefineVarCommand.h  EqualsCommand.cpp  EqualsCommand.h  IfCommand.cpp  IfCommand.h  NumberOfArgsToCommandException.h  NumberOfArgsToCommandException.h.gch  OpenDataServerCommand.cpp  OpenDataServerCommand.h  PrintCommand.cpp  PrintCommand.h  SemicolonCommand.h  SleepCommand.cpp  SleepCommand.h  WhileCommand.cpp  WhileCommand.h
prog1Project/Databases/: CMakeLists.txt  ConstsDB.cpp  ConstsDB.h  SymbolsDB.cpp  SymbolsDB.h
prog1Project/Expressions/: BinaryExpression.h  CMakeLists.txt  ExpressionFactory.cpp  ExpressionFactory.h  Number.h  UnaryExpression.h  Var.h
prog1Project/Expressions/BooleanExpressions/: And.h  Bigger.h  BiggerEquals.h  Equals.h  NotEquals.h  Or.h  Smaller.h  SmallerEquals.h  Xor.h
prog1Project/Expressions/Expressions_operators/: Div.h  Minus.h  Mul.h  Neg.h  Plus.h  Pow.h
prog1Project/Sockets/: FlightDataGetterSetter.cpp  FlightDataGetterSetter.h  FlightSocketManager.cpp  FlightSocketManager.h
prog1Project/src/: Interpreter.cpp  Utils.h
prog1Project/src/Commands/: DefineVarCommand.h  OpenDataServerCommand.cpp  PrintCommand.cpp
